--- a/index.html
+++ b/index.html
@@ -1,240 +1,166 @@
 <!DOCTYPE html>
-  <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-  <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-  <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-  <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-  <html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<html>
 
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Hands Posture Model</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"></script>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Hands Posture Model</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
 
-  </head>
+</head>
 
-  <body>
-    <!--[if lt IE 7]>
+<body class="bg-light">
+  <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <div class='teachable'>
-      <div>Teachable Machine Hands Posture Model</div>
-      <button type="button" onclick="init()">Start</button>
-      <div><canvas id="canvas"></canvas></div>
+  <div class="container"> 
+    <div class="row">
 
+      <div class="row mx-auto my-4">
+        <div class="col-9">Hands On Table Detection Model</div>
+        <button type="button" class="btn btn-primary col-3" onclick="init()">Start</button>
+      </div>
+      
+
+      <div class="col-12 my-2" style="width: 100%; text-align: center; margin: 0 auto;">
+        <canvas id="canvas" class="d-inline"></canvas>
+      </div>
+        
       <!-- Pose model results -->
-      Two Hands on Table
-      <div class="progress mb-3">
-        <div class="progress-bar bg-success" id="hand1" role="progressbar" style="width: 0;"></div>
+      <div class="col-12">
+        Two Hands on Table
+        <div class="progress mb-3" style="height:2rem">
+          <div class="progress-bar bg-success" id="hand1" role="progressbar" style="width: 0;"></div>
+        </div>
+
+        Hand(s) not on Table
+        <div class="progress mb-3" style="height:2rem">
+          <div class="progress-bar bg-danger" id="hand2" role="progressbar" style="width: 0;"></div>
+        </div>
       </div>
-
-      Hand(s) not on Table
-      <div class="progress mb-3">
-        <div class="progress-bar bg-danger" id="hand2" role="progressbar" style="width: 0;"></div>
-      </div>
-
-
-      <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
-      <script
-        src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
-      <script type="text/javascript">
-        // More API functions here:
-        // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/pose
-
-        // the link to your model provided by Teachable Machine export panel
-        //const URL = "https://teachablemachine.withgoogle.com/models/-0vzxspVM/";
-        //const URL_2 = "https://teachablemachine.withgoogle.com/models/K_bEcFNdb/";
-        let model, webcam, ctx, labelContainer, maxPredictions;
-        var num = 0;
-        var ans = 0;
-        var num_2 = 0;
-        var ans_2 = 0;
-        async function init() {
-          const modelURL = "https://teachablemachine.withgoogle.com/models/rsT-e0iRb/" + "model.json";
-          const metadataURL = "https://teachablemachine.withgoogle.com/models/rsT-e0iRb/" + "metadata.json";
-
-          // const modelURL_2 = "https://teachablemachine.withgoogle.com/models/ja7WndZ1g/" + "model.json";
-          // const metadataURL_2 = "https://teachablemachine.withgoogle.com/models/ja7WndZ1g/" + "metadata.json";
-          // load the model and metadata
-          // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
-          // Note: the pose library adds a tmPose object to your window (window.tmPose)
-          model = await tmPose.load(modelURL, metadataURL);
-          maxPredictions = model.getTotalClasses();
-
-          // model_2 = await tmImage.load(modelURL_2, metadataURL_2);
-          // maxPredictions_2 = model_2.getTotalClasses();
-          console.log('models_loaded');
-          // Convenience function to setup a webcam
-          const size = 200;
-          const flip = true; // whether to flip the webcam
-          webcam = new tmPose.Webcam(size, size, flip); // width, height, flip
-          await webcam.setup(); // request access to the webcam
-          await webcam.play();
-          window.requestAnimationFrame(loop);
-
-          // append/get elements to the DOM
-          const canvas = document.getElementById("canvas");
-          canvas.width = size; canvas.height = size;
-          ctx = canvas.getContext("2d");
-          // labelContainer = document.getElementById("label-container");
-          // for (let i = 0; i < maxPredictions; i++) { // and class labels
-          //     labelContainer.appendChild(document.createElement("div"));
-          // }
-          // labelContainer_2 = document.getElementById("label-container_2");
-          // for (let i = 0; i < maxPredictions_2; i++) { // and class labels
-          //     labelContainer_2.appendChild(document.createElement("div"));
-          // }
-
-          // let score1 = maxPredictions[0].probability.toFixed(2) * 100
-          // let score2 = maxPredictions[1].probability.toFixed(2) * 100
-          // document.getElementById("hand1").style.width =  `${score1}%`
-          // document.getElementById("hand2").innerHTML = `${score2}%`
-
-          // let score3 = maxPredictions_2[0].probability.toFixed(2) * 100
-          // let score4 = maxPredictions_2[1].probability.toFixed(2) * 100
-          // document.getElementById("face3").style.width =  `${score3}%`
-          // document.getElementById("face4").innerHTML = `${score4}%`
-
-          console.log('canvas setup done');
-        }
-
-        async function loop(timestamp) {
-          webcam.update(); // update the webcam frame
-          await predict(model, maxPredictions);
-          window.requestAnimationFrame(loop);
-        }
-
-        async function predict(model = model, maxPredictions = maxPredictions) {
-          // Prediction #1: run input through posenet
-          // estimatePose can take in an image, video or canvas html element
-          const { pose, posenetOutput } = await model.estimatePose(webcam.canvas);
-          //console.log(pose);
-          // console.log("output of posenet");
-          //console.log(posenetOutput);
-          // console.log('did pose estimation using model');
-          //const { pose_2, posenetOutput_2 } = await model_2.estimatePose(webcam.canvas);
-          // Prediction 2: run input through teachable machine classification model
-
-          const prediction = await model.predict(posenetOutput);
-          // const prediction_2 = await model_2.predict(webcam.canvas);
-          // console.log('done with predicitons for both models');
-          // console.log(prediction_2[0].probability.toFixed(2));
-
-          let score1 = prediction[0].probability.toFixed(2) * 100
-          let score2 = prediction[1].probability.toFixed(2) * 100
-          document.getElementById("hand1").style.width = `${score1}%`
-          document.getElementById("hand1").innerHTML = `${score1}%`
-          document.getElementById("hand2").style.width = `${score2}%`
-          document.getElementById("hand2").innerHTML = `${score2}%`
-
-          // let score3 = prediction_2[0].probability.toFixed(2) * 100
-          // let score4 = prediction_2[1].probability.toFixed(2) * 100
-          // document.getElementById("face3").style.width = `${score3}%`
-          // document.getElementById("face3").innerHTML = `${score3}%`
-          // document.getElementById("face4").style.width = `${score4}%`
-          // document.getElementById("face4").innerHTML = `${score4}%`
-
-
-
-          // for (let i = 0; i < maxPredictions; i++) {
-          //         const classPrediction =
-          //             prediction[i].className + ": " + prediction[i].probability.toFixed(2);
-          //         labelContainer.childNodes[i].innerHTML = classPrediction;
-          //     }
-          // for (let i = 0; i < maxPredictions_2; i++) {
-          //         const classPrediction_2 =
-          //             prediction_2[i].className + ": " + prediction_2[i].probability.toFixed(2);
-          //         labelContainer_2.childNodes[i].innerHTML = classPrediction_2;
-          //     }
-
-          num += 1;
-          // num_2 += 1;
-          ans += parseFloat(prediction[1].probability.toFixed(2));
-          // ans_2 += parseFloat(prediction_2[1].probability.toFixed(2));
-
-          if (num > 50 && ans / num > 0.7) {
-
-            Toastify({
-              text: "Ensure that your face is fully visible!",
-              duration: 5000,
-              close: true,
-              gravity: "top", // `top` or `bottom`
-              position: 'right', // `left`, `center` or `right`
-              backgroundColor: "#FF0725",
-              stopOnFocus: true, // Prevents dismissing of toast on hover
-            }).showToast();
-
-            // alert("FACE NOT DETECTED!!!");
-            ans = 0;
-            num = 0;
-            ans_2 = 0;
-            num_2 = 0;
-          } else if (num > 50) {
-            ans = 0;
-            num = 0;
-          }
-          // if (num_2 > 70 && ans_2 / num_2 > 0.5) {
-
-          //   Toastify({
-          //     text: "Ensure that your face is looking at the screen!",
-          //     duration: 5000,
-          //     close: true,
-          //     gravity: "top", // `top` or `bottom`
-          //     position: 'right', // `left`, `center` or `right`
-          //     backgroundColor: "#CD4242",
-          //     stopOnFocus: true, // Prevents dismissing of toast on hover
-          //   }).showToast();
-
-          //   // alert("PLEASE FOCUS ON THE EXAM SCREEN!!!");
-
-          //   ans_2 = 0;
-          //   num_2 = 0;
-          //   num = 0;
-          //   ans = 0;
-          // } else if (num_2 > 70) {
-          //   ans_2 = 0;
-          //   num_2 = 0;
-          // }
-
-          //console.log(ans);
-
-          // finally draw the poses
-          drawPose(pose);
-        }
-
-        function drawPose(pose) {
-          if (webcam.canvas) {
-            ctx.drawImage(webcam.canvas, 0, 0);
-            // draw the keypoints and skeleton
-            if (pose) {
-              const minPartConfidence = 0.5;
-              tmPose.drawKeypoints(pose.keypoints, minPartConfidence, ctx);
-              tmPose.drawSkeleton(pose.keypoints, minPartConfidence, ctx);
-            }
-          }
-        }
-      </script>
     </div>
+  </div>
 
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
+  <script type="text/javascript">
+    // More API functions here:
+    // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/pose
 
-  </html>
+    // the link to your model provided by Teachable Machine export panel
+    let model, webcam, ctx, labelContainer, maxPredictions;
+    var num = 0;
+    var ans = 0;
+    var num_2 = 0;
+    var ans_2 = 0;
+    async function init() {
+      const modelURL = "https://teachablemachine.withgoogle.com/models/rsT-e0iRb/" + "model.json";
+      const metadataURL = "https://teachablemachine.withgoogle.com/models/rsT-e0iRb/" + "metadata.json";
+
+      // load the model and metadata
+      // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
+      // Note: the pose library adds a tmPose object to your window (window.tmPose)
+      model = await tmPose.load(modelURL, metadataURL);
+      maxPredictions = model.getTotalClasses();
+
+      console.log('models_loaded');
+      // Convenience function to setup a webcam
+      const size = 300;
+      const flip = true; // whether to flip the webcam
+      webcam = new tmPose.Webcam(size, size, flip); // width, height, flip
+      await webcam.setup(); // request access to the webcam
+      await webcam.play();
+      window.requestAnimationFrame(loop);
+
+      // append/get elements to the DOM
+      const canvas = document.getElementById("canvas");
+      canvas.width = size; canvas.height = size;
+      ctx = canvas.getContext("2d");
+      console.log('canvas setup done');
+    }
+
+    async function loop(timestamp) {
+      webcam.update(); // update the webcam frame
+      await predict(model, maxPredictions);
+      window.requestAnimationFrame(loop);
+    }
+
+    async function predict(model = model, maxPredictions = maxPredictions) {
+      // Prediction #1: run input through posenet
+      // estimatePose can take in an image, video or canvas html element
+      const { pose, posenetOutput } = await model.estimatePose(webcam.canvas);
+      const prediction = await model.predict(posenetOutput);
+
+      let score1 = prediction[0].probability.toFixed(2) * 100
+      let score2 = prediction[1].probability.toFixed(2) * 100
+      document.getElementById("hand1").style.width = `${score1}%`
+      document.getElementById("hand1").innerHTML = `${score1}%`
+      document.getElementById("hand2").style.width = `${score2}%`
+      document.getElementById("hand2").innerHTML = `${score2}%`
+
+      num += 1;
+      ans += parseFloat(prediction[1].probability.toFixed(2));
+
+      if (num > 50 && ans / num > 0.7) {
+        Toastify({
+          text: "Ensure both hands are on the table!",
+          duration: 5000,
+          close: true,
+          gravity: "top", // `top` or `bottom`
+          position: 'right', // `left`, `center` or `right`
+          backgroundColor: "#FF0725",
+          stopOnFocus: true, // Prevents dismissing of toast on hover
+        }).showToast();
+
+        // alert("FACE NOT DETECTED!!!");
+        ans = 0;
+        num = 0;
+        ans_2 = 0;
+        num_2 = 0;
+      } else if (num > 50) {
+        ans = 0;
+        num = 0;
+      }
+      drawPose(pose);
+    }
+
+    function drawPose(pose) {
+      if (webcam.canvas) {
+        ctx.drawImage(webcam.canvas, 0, 0);
+        // draw the keypoints and skeleton
+        if (pose) {
+          const minPartConfidence = 0.5;
+          tmPose.drawKeypoints(pose.keypoints, minPartConfidence, ctx);
+          tmPose.drawSkeleton(pose.keypoints, minPartConfidence, ctx);
+        }
+      }
+    }
+  </script>
+
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
+</body>
+
+</html>
