--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     var num_2 = 0;
     var ans_2 = 0;
     async function init() {
-      const modelURL = "https://teachablemachine.withgoogle.com/models/rsT-e0iRb/" + "model.json";
-      const metadataURL = "https://teachablemachine.withgoogle.com/models/rsT-e0iRb/" + "metadata.json";
+      const modelURL = "https://teachablemachine.withgoogle.com/models/Sz2QWJPMB/" + "model.json";
+      const metadataURL = "https://teachablemachine.withgoogle.com/models/Sz2QWJPMB/" + "metadata.json";
 
       // load the model and metadata
       // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
