--- a/demo.html
+++ b/demo.html
@@ -10,30 +10,72 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Models Demo Portal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
 
-<body>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
   <script>
+
+
+
+    let upload_filename = null
+
     function readURL(input) {
       if (input.files && input.files[0]) {
         var reader = new FileReader();
+        upload_filename = `faceIdUpload_${Date.now()}.png`
 
         reader.onload = function (e) {
           $('#blah')
             .attr('src', e.target.result)
             .width(150)
             .height(200);
+          // console.log(e.target.result);
+          // console.log(typeof e.target.result);
+          fetch('http://localhost:5000/upload', {
+            method: 'POST',
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ imageData: e.target.result.replace('data:image/png;base64,', ''), imgName: upload_filename }),
+          })
+
         };
 
         reader.readAsDataURL(input.files[0]);
+        // console.log( e.target.result)
       }
     }
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
 
-  <script type="text/javascript">
+    // send to pruthiv
+    function process() {
+      fetch('http://b159a2505727.ngrok.io/compareface', {
+        method: 'POST',
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ faceIdFilepath: upload_filename, webcamFilepath: webcam_filename }),
+      })
+        .then(response =>
+          res = response.json()
+        )
+        .then(response => {
+          console.log(response)
+          document.getElementById("loading").style.display = "none"
+          // document.getElementById("result").innerHTML = response
+          document.getElementById("result").textContent = JSON.stringify(response, undefined, 2);
+          const verified = response['verified']
+          console.log(verified)
+          console.log(typeof verified)
+
+          if (verified) {
+          document.getElementById("proceedBtn").style.display = "block"
+          }
+        })
+    }
+
+
 
     // More API functions here:
     // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/pose
@@ -72,33 +114,89 @@
       ctx.drawImage(webcam.canvas, 0, 0);
     }
 
+    let webcam_filename = null;
+
     async function captureFace() {
+      document.getElementById("loading").style.display = "block"
+      webcam_filename = `webcamUpload_${Date.now()}.png`
+      await webcam.stop();
       const canvas = document.getElementById("canvas")
       const data = canvas.toDataURL('image/png')
+      // console.log(data)
       fetch('http://localhost:5000/upload', {
         method: 'POST',
         headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ imageData: data })
+        body: JSON.stringify({ imageData: data.replace('data:image/png;base64,', ''), imgName: webcam_filename }),
       })
+        .then(resp =>
+          process()
+        )
     }
 
   </script>
+</head>
 
+<body>
   <div class="container">
-    <div class="row">
-
-
-      <div class="col-lg-12">
-
-        <input type='file' onchange="readURL(this);" />
-        <img id="blah" src="#" alt="your image" /></br>
+    <div class="row m-3">
+      <div class="col-12">
+        <ol>
+          <li>Upload your ID Card</li>
+        
+        <!-- <div class="col-6">
+              <input type='file' onchange="readURL(this);" />
+                <img id="blah" src="#" alt="your image" /></br>
+              </div> -->
+          <div class="input-group col-2">
+            <input type="file" accept="image/png" class="form-control" id="inputGroupFile01" onchange="readURL(this);">
+          </div>
+          <div class="col-10 my-3">
+            <img id="blah"
+              src="https://image.shutterstock.com/image-vector/default-avatar-profile-icon-grey-600w-518740741.jpg"
+              alt="your image" width="200" height="200" /></br>
+          </div>
+          <li>Click "Turn on WebCam"</li>
+          <li>Once your face is positioned in the center, click "Capture Face"</li>
+          <div class="col-6 my-3">
+            <div class="row">
+              <button type="button" class="btn btn-primary col-12" onclick="init()">1. Turn On Webcam</button>
+              <canvas id="canvas" class="col-sm-12 col-md-8 m-4">
+                <!-- Capture live  data -->
+              </canvas>
+              <a href="#result" type="button"  class="btn btn-primary col-12" onclick="captureFace()">2. Capture Face</a>
+            </div>
+          </div>
+          <li>Results will be shown below</li>
+        </ol>
+        <div class="col-12">
+          <div id="loading" style="display: none;">
+            <div class="spinner-grow text-primary" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+            <div class="spinner-grow text-secondary" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+            <div class="spinner-grow text-success" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+            <div class="spinner-grow text-danger" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+            <div class="spinner-grow text-warning" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+            <div class="spinner-grow text-info" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+            <div class="spinner-grow text-dark" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+          </div>
+          <pre id="result">
+          </pre>
+          <a href="#result" id="proceedBtn" style="display: none;" type="button" class="btn btn-success col-12" >Proceed to Exam</a>
+        </div>
       </div>
-      <button type="button" onclick="init()">1. Turn On Webcam</button>
-      <canvas id="canvas">
-        <!-- Capture live  data -->
-      </canvas>
-      <button type="button" onclick="captureFace()">2. Capture Face</button>
-      <button type="submit" id="loginsubm" value="Signup" class="btn btn-primary">Submit</button>
 
     </div>
   </div>
@@ -106,8 +204,10 @@
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+    crossorigin="anonymous"></script>
 
-  <script src="" async defer></script>
 </body>
 
 </html>
