--- a/demo.html
+++ b/demo.html
@@ -8,7 +8,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Models Demo Portal</title>
+  <title>Student Verification Portal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"></script>
@@ -139,6 +139,9 @@
 
 <body>
   <div class="container">
+    <div class="row m-3 bg-light h1 p-5">
+      Student Verification Portal
+    </div>
     <div class="row m-3">
       <div class="col-12">
         <ol>
